added remove row function and scrapped some stuff

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       <div id="onClick" onClick="addNewCells()">
          <button>Click me to add cells!</button>
       </div>
+      <div id="onClick" onClick="removeRow()">
+         <button>Click me to remove rows!</button>
+      </div>
       <table id="table">
       </table>
       
