--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <div id="onClick" onClick="removeRow()">
          <button>Click me to remove rows!</button>
       </div>
+      <div id="onClick" onClick="removeCells()">
+         <button>Click me to remove cells!</button>
+      </div>
       <table id="table">
       </table>
       
