Fixed a linting error with a missing bracket and added function strucutre

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="color" id="green" onclick="selectColor(this)"></div>
         <div class="color" id="blue" onclick="selectColor(this)"></div>
         <div class="color" id="purple" onclick="selectColor(this)"></div>
-      </div>
+      </div><br>
       <table id="table">
       </table>
       
