Added function to color all uncolored cells in table

--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
   </head>
   <body>
     <div id="buttons-div">
-      <div id="onClick">
+      <div>
         <button onClick="addNewRows()">Add a row</button>
       </div>
-      <div id="onClick">
+      <div>
         <button onClick="addNewCells()">Add cells</button>
       </div>
-      <div id="onClick">
+      <div>
         <button onClick="removeRow()">Remove rows</button>
       </div>
-      <div id="onClick">
+      <div>
         <button onClick="removeCells()">Remove cells</button>
+      </div>
+      <div>
+         <button onClick="fillUncolored()">Color uncolored cells</button>
       </div>
     </div>
 
