--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         <button onClick="removeCells()">Remove cells</button>
       </div>
       <div>
-         <button onClick="fillUncolored()">Color uncolored cells</button>
+        <button onClick="fillUncolored()">Color uncolored cells</button>
+      </div>
+      <div>
+        <button onClick="fillAll()">Color all cells</button>
       </div>
     </div>
 
