Added function to clear colors of all cells in table

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       <div>
         <button onClick="fillAll()">Color all cells</button>
       </div>
+      <div>
+         <button onClick="clearAll()">Clear all cells</button>
+       </div>
     </div>
 
     <div>
